Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34265

lupdate does not detect NULL and nullptr as 0 when being passed as context

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.6.1
    • 4.8.5
    • Tools: Linguist
    • None
    • Linux
    • ed2d5b7f44f9d0a25aa185d3843ee14366ffef7c

      Only the first of these calls is extracted as containing a plural string, even if all 3 are otherwise the same for the C++ compiler:

      tr("Foo 0 %n", 0, i);
      tr("Foo NULL %n", NULL, i);
      tr("Foo nullptr %n", nullptr, i);
      

        1. plural.cpp
          0.2 kB
          Rolf Eike Beer
        For Gerrit Dashboard: QTBUG-34265
        # Subject Branch Project Status CR V

            dg0yt Kai Pastor
            rebemlix Rolf Eike Beer
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes