lupdate: Treat NULL and Q_NULLPTR like literal 0

Task-number: QTBUG-34265
Change-Id: I2b69d7c6bc0514977cee9dd50a0c861e46dc589b
Reviewed-by: Rolf Eike Beer <eb@emlix.com>
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@theqtcompany.com>